--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.6",
     "@sanity/image-url": "^0.140.0",
+    "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.76",
+    "gatsby-image": "^2.0.29",
     "gatsby-plugin-postcss": "^2.0.2",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-source-sanity": "^1.0.3",
@@ -26,7 +28,8 @@
     "postcss-preset-env": "^6.5.0",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "reset.css": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
@@ -37,6 +40,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.2",
     "eslint-plugin-standard": "^4.0.0",
+    "postcss-extend-rule": "^2.0.0",
+    "postcss-nested": "^4.1.1",
     "prettier-eslint-cli": "^4.7.1"
   }
 }
