--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@now/node": "^0.12.6",
     "lerna": "^3.9.0",
     "rimraf": "^2.6.3"
+  },
+  "dependencies": {
+    "stripe": "^7.8.0"
   }
 }
