--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.6",
     "@sanity/image-url": "^0.140.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
@@ -29,6 +30,8 @@
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-helmet": "^5.2.0",
+    "react-stripe-elements": "^3.0.0",
+    "react-transition-group": "^4.2.2",
     "reset.css": "^2.0.2"
   },
   "devDependencies": {
