--- a/web/package.json
+++ b/web/package.json
@@ -20,11 +20,12 @@
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
-    "gatsby": "^2.0.76",
+    "evergreen-ui": "^4.18.1",
+    "gatsby": "^2.13.74",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-postcss": "^2.0.2",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-source-sanity": "^1.0.3",
+    "gatsby-source-sanity": "^5.0.2",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.5.0",
     "react": "^16.8.0-alpha.0",
