--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "evergreen-ui": "^4.18.1",
     "gatsby": "^2.13.74",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-postcss": "^2.0.2",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-source-sanity": "^5.0.2",
