--- a/now.json
+++ b/now.json
@@ -15,7 +15,7 @@
   "env": {
     "stripe_key": "@stripe_key",
     "stripe_secret": "@stripe_secret",
-    "CONTACT_RECIPIENT": "@contact-recipient",
+    "CONTACT_RECIPIENT": "@dev-email",
     "SMTP_PASS": "@smtp-pass",
     "SMTP_USER": "@smtp-user",
     "SMTP_HOST": "@smtp.gmail.com"
