--- a/now.json
+++ b/now.json
@@ -18,7 +18,7 @@
     "CONTACT_RECIPIENT": "@dev-email",
     "SMTP_PASS": "@smtp-pass",
     "SMTP_USER": "@smtp-user",
-    "SMTP_HOST": "@smtp.gmail.com"
+    "SMTP_HOST": "smtp.gmail.com"
   },
   "alias": ["metro-pest-website.now.sh"],
   "routes": [
