--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rimraf": "^2.6.3"
   },
   "dependencies": {
+    "micro-cors": "^0.1.1",
     "nodemailer": "^6.4.17",
     "react-html-email": "^3.0.0",
     "stripe": "^7.8.0"
