--- a/now.json
+++ b/now.json
@@ -8,13 +8,11 @@
       "config": { "distDir": "public" }
     },
     {
-      "src": "api/payments.js",
+      "src": "api/email/index.js",
       "use": "@now/node"
     }
   ],
   "env": {
-    "stripe_key": "@stripe_key",
-    "stripe_secret": "@stripe_secret",
     "CONTACT_RECIPIENT": "@dev-email",
     "SMTP_PASS": "@smtp-pass",
     "SMTP_USER": "@smtp-user",
@@ -22,6 +20,10 @@
   },
   "alias": ["metro-pest-website.now.sh"],
   "routes": [
+    {
+      "src": "/api/email/?",
+      "dest": "/api/email/index.js"
+    },
     {
       "src": "/api/payments/?",
       "dest": "/api/payments.js"
