--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,8 @@
     "react-stripe-elements": "^3.0.1",
     "react-transition-group": "^4.4.1",
     "reset.css": "^2.0.2",
-    "use-http": "^1.0.16"
+    "use-http": "^1.0.16",
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
