remove secrets to deploy

--- a/now.json
+++ b/now.json
@@ -5,20 +5,18 @@
     {
       "src": "web/package.json",
       "use": "@now/static-build",
-      "config": { "distDir": "public" }
+      "config": {
+        "distDir": "public"
+      }
     },
     {
       "src": "api/email/index.js",
       "use": "@now/node"
     }
   ],
-  "env": {
-    "CONTACT_RECIPIENT": "@dev-email",
-    "SMTP_PASS": "@smtp-pass",
-    "SMTP_USER": "@smtp-user",
-    "SMTP_HOST": "smtp.gmail.com"
-  },
-  "alias": ["metro-pest-website.now.sh"],
+  "alias": [
+    "metro-pest-website.now.sh"
+  ],
   "routes": [
     {
       "src": "/api/email/?",
