Add robots and sitemap

--- a/now.json
+++ b/now.json
@@ -14,6 +14,12 @@
       "use": "@now/node"
     }
   ],
+  "env": {
+    "CONTACT_RECIPIENT": "@dev-email",
+    "SMTP_PASS": "@smtp-pass",
+    "SMTP_USER": "@smtp-user",
+    "SMTP_HOST": "smtp.gmail.com"
+  },
   "alias": [
     "metro-pest-website.now.sh"
   ],
