--- a/studio/package.json
+++ b/studio/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.2",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "prettier-eslint-cli": "^4.7.1"
   }
 }
