--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-standard": "^4.1.0",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-nested": "^4.2.3",
     "prettier-eslint-cli": "^5.0.0"
