--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "rimraf": "^2.6.3"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "micro-cors": "^0.1.1",
     "nodemailer": "^6.4.17",
     "react-html-email": "^3.0.0",
+    "request-ip": "^2.1.3",
     "stripe": "^7.8.0"
   }
 }
