--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.1",
     "react-transition-group": "^4.4.1",
     "reset.css": "^2.0.2",
